welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: illegal start of simple expression
 }
 ^